Bug 252779 - "Send again" should only be acitve or visible for mails that I actually did send in the first place
Summary: "Send again" should only be acitve or visible for mails that I actually did s...
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-29 18:31 UTC by Björn Balazs
Modified: 2010-12-02 13:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Balazs 2010-09-29 18:31:11 UTC
Version:           unspecified (using Devel) 
OS:                Linux

or in other words - disable this for all folders but my sent-mail-folders.

Reproducible: Didn't try
Comment 1 Felix Wolfsteller 2010-10-06 10:44:54 UTC
Confirmed, version 4:4.5~20101001.1181693-1maemo4.1181469 .

("Send Again") is an action in the Actions flap in the Read-A-Mail-View, under the Email- Section.
Comment 2 Tobias Koenig 2010-11-29 14:28:53 UTC
SVN commit 1202032 by tokoe:

Show 'Send Again' action only when current collection
is the 'Sent Mails' folder.

BUG: 252779


 M  +1 -1      KMailActions.qml  
 M  +8 -0      mainview.cpp  
 M  +9 -0      mainview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202032
Comment 3 Ludwig Reiter 2010-12-02 13:29:53 UTC
version 20101202-1202744-1maemo1

EMail/Send Again is only in the mail view of the sent-mails folder.