Show 'Send Again' action only when current collection is the 'Sent Mails' folder.

BUG: 252779

svn path=/trunk/KDE/kdepim/mobile/; revision=1202032